fix: visible scrollbars > scroll lock padding behavior

--- a/apps/docs/.vitepress/theme/styles/main.css
+++ b/apps/docs/.vitepress/theme/styles/main.css
@@ -28,6 +28,7 @@ body {
 
 [data-theme='vue-equipment'] .VPSidebar {
   padding-top: 82px;
+  width: auto;
 }
 
 [data-theme='vue-equipment'] .vp-doc div[class*='language-'] {
